--- a/Style.css
+++ b/Style.css
@@ -14,118 +14,6 @@
     src: url("fonts/Roboto_500_latin.woff2") format('woff2');
 }
 
-/*@media only screen and (max-width: 1232px) {
-
-    .col-lg-1 {
-        width: var(--one-col-lg-width);
-    }
-    .col-lg-2 {
-        width: calc(var(--one-col-lg-width)*2);
-    }
-    .col-lg-3 {
-        width: calc(var(--one-col-lg-width)*3);
-    }
-    .col-lg-4 {
-        width: calc(var(--one-col-lg-width)*4);
-    }
-    .col-lg-5 {
-        width: calc(var(--one-col-lg-width)*5);
-    }
-    .col-lg-6 {
-        width: calc(var(--one-col-lg-width)*6);
-    }
-    .col-lg-7 {
-        width: 50%;
-    }
-    .col-lg-8 {
-        width: calc(var(--one-col-lg-width)*8);
-    }
-    .col-lg-9 {
-        width: calc(var(--one-col-lg-width)*9);
-    }
-    .col-lg-10 {
-        width: calc(var(--one-col-lg-width)*10);
-    }
-    .col-lg-11 {
-        width: calc(var(--one-col-lg-width)*11);
-    }
-    .col-lg-12 {
-        width: calc(var(--one-col-lg-width)*12);
-    }
-    .col-lg-13 {
-        width: calc(var(--one-col-lg-width)*13);
-    }
-    .col-lg-14 {
-        width: 100%;
-    }
-
-}
-@media only screen and (max-width: 768px) {
-    .col-md-1 {
-        width: var(--one-col-lg-width);
-    }
-    .col-md-2 {
-        width: calc(var(--one-col-lg-width)*2);
-    }
-    .col-md-3 {
-        width: calc(var(--one-col-lg-width)*3);
-    }
-    .col-md-4 {
-        width: calc(var(--one-col-lg-width)*4);
-    }
-    .col-md-5 {
-        width: calc(var(--one-col-lg-width)*5);
-    }
-    .col-md-6 {
-        width: calc(var(--one-col-lg-width)*6);
-    }
-    .col-md-7 {
-        width: 50%;
-    }
-    .col-md-8 {
-        width: calc(var(--one-col-lg-width)*8);
-    }
-    .col-md-9 {
-        width: calc(var(--one-col-lg-width)*9);
-    }
-    .col-md-10 {
-        width: calc(var(--one-col-lg-width)*10);
-    }
-    .col-md-11 {
-        width: calc(var(--one-col-lg-width)*11);
-    }
-    .col-md-12 {
-        width: calc(var(--one-col-lg-width)*12);
-    }
-    .col-md-13 {
-        width: calc(var(--one-col-lg-width)*13);
-    }
-    .col-md-14 {
-        width: 100%;
-    }
-
-}
-@media only screen and (max-width: 360px) {
-    .col-1 {
-        width: var(--one-col-width);
-    }
-    .col-2 {
-        width: calc(var(--one-col-width)*2);
-    }
-    .col-3 {
-        width: calc(var(--one-col-width)*3);
-    }
-    .col-4 {
-        width: calc(var(--one-col-width)*4);
-    }
-    .col-5 {
-        width: calc(var(--one-col-width)*5);
-    }
-    .col-6 {
-        width: 100%;
-    }
-
-}*/
 :root {
     --primary: #3077C6;
     --primary-dark: #10367c;
@@ -138,8 +26,62 @@
     --general-white: #FFFFFF;
     --secondary-text: #BFBFBF;
     --bg-color-main: #EAF0F9;
-    /*--one-col-lg-width: 7.1428%;
-    --one-col-width: 16.6666%*/
+    --one-col-width: calc(100% * 1 / 12);
+    --one-col-md-width: calc(100% * 1 / 6);
+
+}
+
+@media only screen and (max-width: 1232px) {
+
+    .col-1 {
+        width: var(--one-col-width);
+    }
+
+    .col-2 {
+        width: calc(var(--one-col-width) * 2);
+    }
+
+    .col-3 {
+        width: calc(var(--one-col-width) * 3);
+    }
+
+    .col-4 {
+        width: calc(var(--one-col-width) * 4);
+    }
+
+    .col-5 {
+        width: calc(var(--one-col-width) * 5);
+    }
+
+    .col-6 {
+        width: calc(var(--one-col-width) * 6);
+    }
+
+    .col-7 {
+        width: calc(var(--one-col-width) * 7); /*50%*/
+    }
+
+    .col-8 {
+        width: calc(var(--one-col-width) * 8);
+    }
+
+    .col-9 {
+        width: calc(var(--one-col-width) * 9);
+    }
+
+    .col-10 {
+        width: calc(var(--one-col-width) * 10);
+    }
+
+    .col-11 {
+        width: calc(var(--one-col-width) * 11);
+    }
+
+    .col-12 {
+        width: calc(var(--one-col-width) * 12);
+    }
+
+
 }
 
 body {
@@ -147,39 +89,41 @@ body {
 }
 
 .top_section {
+
     box-sizing: border-box;
     width: 100%;
     max-width: 1440px;
-    /*height: auto;*/
+    max-height: 900px;
     min-height: 100vh;
     background-image: url("images/background mountains.png");
     background-blend-mode: darken;
     background-position: top center;
+    background-repeat: no-repeat;
+
+}
+
+.top_section_conteiner {
+    padding-left: var(--one-col-width);
+    padding-right: var(--one-col-width);
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .top_section_header {
-    box-sizing: border-box;
-    width: 85.42%; /*1230 / 1440*/
-    /*height: 90px;*/
     padding-top: 50px;
-    margin: auto;
     display: flex;
     justify-content: space-between;
-    align-items: flex-end;
-    align-content: baseline;
 }
 
-.top_section_header_logo {
-    align-items: flex-start;
-
+.logo_trip_house {
+    width: 205px;
+    height: 40px;
 }
 
 .top_section_header_stays_attractions_night_accountCircle {
     display: flex;
     width: 350px;
-    height: 45px;
     justify-content: space-between;
-
 }
 
 .top_section_header_night_accountCircle {
@@ -190,6 +134,20 @@ body {
     align-items: center;
 }
 
+.night {
+    width: 30px;
+    height: 30px;
+}
+
+.account_circle {
+    width: 40px;
+    height: 40px;
+}
+
+.top_section_menu {
+    display: none;
+}
+
 .top_section_header_stays_attractions {
     display: flex;
     width: 200px;
@@ -198,14 +156,14 @@ body {
     align-items: center;
     font: 400 24px Roboto;
     color: var(--general-white);
-    align-content: space-between;
+
 }
 
 .stays, .attractions {
     margin: 0;
 }
 
-.stays::after {
+.stays:hover::after {
     content: "";
     height: 4px;
     width: 50px;
@@ -230,55 +188,30 @@ body {
 }
 
 .discoverStays {
-    font-family: Roboto, sans-serif;
-    font-weight: 500;
-    font-size: 50px;
-    color: var(--general-white);
+    font: 500 50px Roboto;
     line-height: 58px;
-    display: flex;
-    padding-left: 104px;
+    color: var(--general-white);
     padding-top: 202px;
     margin: 0;
-}
-
-.top_section_main {
-    box-sizing: border-box;
-    width: 100%;
-    /*height: 810px;*/
 }
 
 .top_section_main_general_label {
     display: flex;
     box-sizing: border-box;
-    min-height: 145px; /**/
-    width: 52.777%; /*760px/1440px *на самом деле 640*/
+    min-height: 145px;
+    width: 640px;
     justify-content: space-between;
     align-items: flex-end;
-    padding-left: 130px;
+    padding-left: 25px;
     padding-bottom: 25px;
     font: 400 18px Roboto;
-    line-height: 21px;
     color: var(--general-white);
-}
-
-.top_section_main_form_background {
-    display: flex;
-    box-sizing: border-box;
-    /* height: 65px;*/ /*thinking about it*/
-    width: 85.4166%; /*1230px/1440*/
-    justify-content: center;
-    margin: auto;
-    align-items: baseline;
-    background-color: var(--secondary);
-    border-radius: 8px
-
 }
 
 .top_section_main_form {
     display: flex;
     box-sizing: border-box;
-    height: 65px; /*thinking about it*/
-    width: 85.4166%; /*1230px/1440*/
+    height: 65px;
     justify-content: space-between;
     margin: auto;
     align-items: baseline;
@@ -292,7 +225,7 @@ body {
     box-sizing: border-box;
     align-self: center;
     height: 65px;
-    width: 32.43%; /*467px / 1440*/
+    width: 467px; /*467px / 1440*/
     border: 3px solid transparent;
     border-radius: 8px;
     font: 400 18px Roboto;
@@ -306,7 +239,7 @@ body {
     outline: none;
 }
 
-#destination::placeholder, #information_about_order::placeholder { /* working*/
+#destination::placeholder, #information_about_order::placeholder {
     font: 400 18px Roboto;
     line-height: 21px;
     color: var(--text-color-main);
@@ -324,7 +257,7 @@ body {
     display: flex;
     box-sizing: border-box;
     height: 65px;
-    width: 18.05%; /*260px / 1440*/
+    width: 260px; /*260px / 1440*/
     align-self: center;
     justify-content: center;
     border: 3px solid var(--secondary);
@@ -340,7 +273,7 @@ body {
     box-sizing: border-box;
     align-self: center;
     height: 65px;
-    width: 21.805%; /*314px*/
+    width: 314px; /*314px*/
     justify-content: flex-end;
     align-items: center;
     border: 3px solid transparent;
@@ -354,8 +287,8 @@ body {
     align-items: baseline;
     font: 500 24px Roboto;
     color: var(--general-white);
-    height: 100%;
-    width: 13.194%; /*190px*/
+    height: 65px;
+    width: 190px; /*190px*/
     background: var(--primary);
     border-radius: 8px;
     border: none;
@@ -365,19 +298,28 @@ body {
 .top_section_main_AppStore_GooglePlay {
     display: flex;
     box-sizing: border-box;
-    max-width: 18.75%; /*270px/1440*/
+    max-width: 270px; /*270px/1440*/
     padding-top: 120px;
-    /* height: 160px;*/
     justify-content: space-between;
     align-items: flex-end;
     margin: auto;
+}
+
+.google_play_badge {
+    width: 135px;
+    height: 40px;
+}
+
+.app_store_badge {
+    width: 120px;
+    height: 40px;
 }
 
 .section_what_do_we_offer {
     box-sizing: border-box;
     width: 100%;
     max-width: 1440px;
-    /* max-height: 100%;*/
+    min-height: 570px;
     background-color: var(--general-white);
     margin: 0;
 
@@ -386,10 +328,8 @@ body {
 .what_do_we_offer_header_heading120 {
     box-sizing: border-box;
     width: 100%;
-    /*height: 166px;*/
     display: flex;
     justify-content: center;
-
 
 }
 
@@ -402,13 +342,18 @@ body {
     padding-top: 120px;
 }
 
-.what_DoWe_Offer_header_hr {
-    width: 100px;
+.what_do_we_offer_header_h2::after {
+    content: "";
     height: 4px;
-    margin: 20px auto 0;
-    border: none;
+    width: 100px;
     background-color: var(--secondary);
+    display: block;
+    position: relative;
+    top: 25px;
+    left: calc((100% - (100px)) / 2);
+    margin-top: -4px;
 }
+
 
 .what_do_we_offer_main {
     display: flex;
@@ -416,9 +361,7 @@ body {
     align-items: baseline;
     box-sizing: border-box;
     width: 100%;
-    /*height: 380px;*/
-
-
+    min-height: 400px;
 }
 
 .what_do_we_offer_main_icons {
@@ -426,8 +369,28 @@ body {
     font-weight: 400;
     font-size: 24px;
     text-align: center;
-    padding-top: 85px;
+    padding-top: 115px;
 
+}
+
+.headphones_support {
+    width: 76px;
+    height: 92px;
+}
+
+.communicate_directly {
+    width: 84px;
+    height: 84px;
+}
+
+.book_online {
+    width: 100px;
+    height: 68px;
+}
+
+.like_real_guest_reviews {
+    width: 92px;
+    height: 84px;
 }
 
 .what_do_we_offer_main_iconsName {
@@ -435,53 +398,11 @@ body {
     margin: 0 auto;
 }
 
-@media only screen and (max-width: 360px) {
-    .what_DoWe_Offer_header_hr {
-        display: none;
-    }
-
-    .what_do_we_offer_header_h2 {
-        font-size: 28px;
-        padding-top: 25px;
-    }
-
-    .what_do_we_offer_main {
-        display: flex;
-        box-sizing: border-box;
-        width: 100%;
-        flex-wrap: wrap;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-    }
-
-    .what_do_we_offer_main:last-child {
-        padding-bottom: 40px;
-
-    }
-
-    .what_do_we_offer_main_icons {
-        font-size: 15px;
-        padding-top: 30px;
-        flex-wrap: wrap;
-
-    }
-
-    .what_do_we_offer_main_iconsName {
-        padding-top: 15px;
-        margin: 0 auto;
-    }
-
-    .offers_icon_svg {
-        max-width: 70%;
-    }
-}
-
-
 footer {
     box-sizing: border-box;
     width: 100%;
-    /*height: 630px;*/
+    max-width: 1440px;
+    height: 630px;
     background-color: var(--primary-dark);
 
 }
@@ -495,7 +416,7 @@ footer {
     display: flex;
     justify-content: space-between;
     padding-left: 104px;
-    padding-top: 120px;
+    padding-top: 115px;
 
 }
 
@@ -532,11 +453,213 @@ ul {
     padding-left: 103px;
 }
 
-@media only screen and (max-width: 360px) {
+@media only screen and (max-width: 480px) {
+    :root {
+        --col-width: calc(100% * 1 / 12);
+    }
+
+    .col-md-1 {
+        width: var(--col-width);
+    }
+
+    .col-md-2 {
+        width: calc(var(--col-width) * 4);
+    }
+
+    .col-md-3 {
+        width: calc(var(--col-width) * 6); /* 50% */
+    }
+
+    .col-md-4 {
+        width: calc(var(--col-width) * 8);
+    }
+
+    .col-md-5 {
+        width: calc(var(--col-width) * 10);
+    }
+
+    .col-md-6 {
+        width: calc(var(--col-width) * 12);
+    }
+
+    .top_section_conteiner {
+        background-position: right;
+        padding-left: calc(var(--one-col-width) / 2);
+        padding-right: calc(var(--one-col-width) / 2);
+    }
+
+    .logo_trip_house {
+        width: 125px;
+        height: 25px;
+    }
+
+    .stays, .attractions {
+        display: none;
+    }
+
+    .night {
+        width: 16px;
+        height: 16px;
+    }
+
+    .account_circle {
+        width: 24px;
+        height: 24px;
+    }
+
+    .top_section_menu {
+        width: 24px;
+        height: 16px;
+        display: flex;
+    }
+
+    .top_section_header {
+        padding-top: 15px;
+        align-items: center;
+    }
+
+    .top_section_header_stays_attractions_night_accountCircle {
+        justify-content: flex-end;
+    }
+
+    .top_section_header_stays_attractions, .stays, .attractions {
+        display: none;
+    }
+
+    .discoverStays {
+        font-size: 30px;
+        padding-top: 50px;
+        line-height: 35px
+    }
+
+    .top_section_main_general_label {
+        display: none;
+    }
+
+    .top_section_all_form {
+        padding-top: 30px;
+    }
+
+    .top_section_main_form {
+        display: flex;
+        flex-wrap: wrap;
+        float: left;
+        box-sizing: border-box;
+        flex-direction: column;
+        align-content: space-around;
+        height: 40vh;
+        background-color: var(--secondary);
+        border-radius: 0;
+    }
+
+    #top_section_main_input_for_check-in_check-out {
+        height: 48px;
+        width: 100%;
+        background-color: var(--secondary);
+        border: none;
+    }
+
+    #check-in, #check-out {
+        height: 48px;
+        width: 50%; /*152px*/
+        border-radius: 8px;
+        margin: 0 8px 8px 8px;
+    }
+
+
+    #destination, #information_about_order, #input-button {
+        height: 48px;
+        width: 95%; /*312px / 328*/
+        border-radius: 8px;
+        margin: 8px 8px 8px;
+        outline: none;
+    }
+
+    .top_section_main_AppStore_GooglePlay {
+        padding-top: 30px;
+
+    }
+
+    /*Offer*/
+    .what_do_we_offer_conteiner {
+        padding: 25px calc(var(--one-col-width) / 2) 40px;
+    }
+
+    .what_do_we_offer_header_h2 {
+        display: flex;
+        font-size: 28px;
+        padding: 0;
+        justify-content: center;
+
+    }
+
+    .what_do_we_offer_header_h2::after {
+        display: none;
+    }
+
+    .what_do_we_offer_main {
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .what_do_we_offer_header_heading120 {
+        padding: 0;
+        justify-content: center;
+    }
+
+    .what_do_we_offer_main_icons {
+        font-size: 15px;
+        padding-top: 35px;
+        flex-wrap: wrap;
+
+    }
+
+    .what_do_we_offer_main_iconsName {
+        padding-top: 15px;
+        margin: 0 auto;
+    }
+
+    .headphones_support {
+        width: 53px;
+        height: 64px;
+    }
+
+    .communicate_directly {
+        width: 58px;
+        height: 58px;
+    }
+
+    .book_online {
+        width: 70px;
+        height: 47px;
+    }
+
+    .like_real_guest_reviews {
+        width: 64px;
+        height: 58px;
+    }
+
+    /*footer*/
+    .footer_conteiner {
+        padding: 40px calc(var(--one-col-width) / 2);
+    }
+
+    footer {
+        max-height: 205px;
+    }
+
     .logo_trip_house_for_footer {
         display: flex;
         justify-content: center;
-        padding-top: 40px;
+
+    }
+
+    .logo_for_footer {
+        width: 98px;
+        height: 19px;
     }
 
     .footer_navigation_list {
@@ -554,15 +677,15 @@ ul {
         justify-content: space-between;
         align-items: center;
         padding: 40px;
+        margin: auto;
     }
 
     .footer_copyright {
         font-size: 12px;
         line-height: 14px;
-        padding: 0 0 40px 0;
+        padding: 0;
         display: flex;
         justify-content: center;
 
     }
-
 }
