--- a/Style.css
+++ b/Style.css
@@ -26,12 +26,12 @@
     --general-white: #FFFFFF;
     --secondary-text: #BFBFBF;
     --bg-color-main: #EAF0F9;
-    --one-col-width: calc(100% * 1 / 12);
+    --one-col-width: calc(100% * 1 / 14);
     --one-col-md-width: calc(100% * 1 / 6);
 
 }
 
-@media only screen and (max-width: 1232px) {
+@media only screen and (max-width: 1440px) {
 
     .col-1 {
         width: var(--one-col-width);
@@ -80,7 +80,12 @@
     .col-12 {
         width: calc(var(--one-col-width) * 12);
     }
-
+    .col-13 {
+        width: calc(var(--one-col-width) * 13);
+    }
+    .col-14 {
+        width: calc(var(--one-col-width) * 14);
+    }
 
 }
 
@@ -163,7 +168,7 @@ body {
     margin: 0;
 }
 
-.stays:hover::after {
+.stays:hover::after,.attractions:hover::after {
     content: "";
     height: 4px;
     width: 50px;
@@ -176,15 +181,11 @@ body {
 }
 
 .attractions:hover::after {
-    content: "";
-    height: 4px;
+
     width: 110px;
-    background-color: var(--secondary);
-    display: block;
-    position: relative;
     top: 10px;
     left: calc((100% - (110px)) / 2);
-    margin-top: -4px;
+
 }
 
 .discoverStays {
@@ -325,7 +326,7 @@ body {
 
 }
 
-.what_do_we_offer_header_heading120 {
+.what_do_we_offer_header_heading120,.homes_guests_loves_header_heading120 {
     box-sizing: border-box;
     width: 100%;
     display: flex;
@@ -333,10 +334,8 @@ body {
 
 }
 
-.what_do_we_offer_header_h2 {
-    font-family: 'Roboto', sans-serif;
-    font-weight: 500;
-    font-size: 40px;
+.what_do_we_offer_header_h2,.homes_guests_loves_header_h2 {
+    font: 500 40px Roboto;
     color: var(--text-color-main);
     margin: 0;
     padding-top: 120px;
@@ -354,7 +353,6 @@ body {
     margin-top: -4px;
 }
 
-
 .what_do_we_offer_main {
     display: flex;
     justify-content: space-evenly;
@@ -365,9 +363,7 @@ body {
 }
 
 .what_do_we_offer_main_icons {
-    font-family: Roboto, sans-serif;
-    font-weight: 400;
-    font-size: 24px;
+    font: 400 24px Roboto;
     text-align: center;
     padding-top: 115px;
 
@@ -396,6 +392,57 @@ body {
 .what_do_we_offer_main_iconsName {
     padding-top: 55px;
     margin: 0 auto;
+}
+
+.homes_guests_loves {
+    box-sizing: border-box;
+    width: 100%;
+    max-width: 1440px;
+    height: 830px;
+    background-color: var(--bg-color-main);
+    margin: 0;
+}
+
+.homes_guests_loves_main {
+    display: flex;
+    justify-content: space-between;
+    box-sizing: border-box;
+    max-width: calc(100% - var(--one-col-width)*2);
+    align-items: baseline;
+    padding-top: 105px;
+    margin: auto;
+    position: relative;
+}
+
+figure {
+    margin: 0;
+}
+
+figure img{
+    width: 100%;
+    max-width: 296px;
+    height: auto;
+}
+
+.homes_guests_loves_main_name_hotel,.homes_guests_loves_main_name_place{
+    font: 400 24px Roboto;
+    line-height: 28px;
+    color: var(--primary);
+    padding-top: 24px;
+}
+.homes_guests_loves_main_name_place {
+    color: var(--secondary-text);
+}
+
+.arrows_right {
+    width: 40px;
+    height: 40px;
+
+}
+.arrow_position {
+    position: absolute;
+    padding-left: 98.5%; /*1200px;*/
+    padding-top: 10%;/*140px;*/
 }
 
 footer {
@@ -452,10 +499,10 @@ ul {
     padding-top: 65px;
     padding-left: 103px;
 }
-
-@media only screen and (max-width: 480px) {
+@media only screen and (max-width : 768px)
+{
     :root {
-        --col-width: calc(100% * 1 / 12);
+        --col-width: calc(100% * 1 / 6);
     }
 
     .col-md-1 {
@@ -463,29 +510,29 @@ ul {
     }
 
     .col-md-2 {
-        width: calc(var(--col-width) * 4);
+        width: calc(var(--col-width) * 2);
     }
 
     .col-md-3 {
-        width: calc(var(--col-width) * 6); /* 50% */
+        width: calc(var(--col-width) * 3); /* 50% */
     }
 
     .col-md-4 {
-        width: calc(var(--col-width) * 8);
+        width: calc(var(--col-width) * 4);
     }
 
     .col-md-5 {
-        width: calc(var(--col-width) * 10);
+        width: calc(var(--col-width) * 5);
     }
 
     .col-md-6 {
-        width: calc(var(--col-width) * 12);
+        width: calc(var(--col-width) * 6);
     }
 
     .top_section_conteiner {
         background-position: right;
-        padding-left: calc(var(--one-col-width) / 2);
-        padding-right: calc(var(--one-col-width) / 2);
+        padding-left: calc(var(--col-width) / 3);
+        padding-right: calc(var(--col-width) / 3);
     }
 
     .logo_trip_house {
@@ -585,7 +632,7 @@ ul {
         padding: 25px calc(var(--one-col-width) / 2) 40px;
     }
 
-    .what_do_we_offer_header_h2 {
+    .what_do_we_offer_header_h2,.homes_guests_loves_header_h2 {
         display: flex;
         font-size: 28px;
         padding: 0;
@@ -640,6 +687,49 @@ ul {
     .like_real_guest_reviews {
         width: 64px;
         height: 58px;
+    }
+/* homes_guests_loves*/
+
+    .homes_guests_loves_conteiner {
+        padding: 40px calc(var(--col-width)/3) 40px;
+    }
+    .homes_guests_loves {
+        max-height: 355px;
+    }
+    .homes_guests_loves_main {
+        display: flex;
+        padding-top: 30px;
+        min-width: 330px;
+        justify-content: space-between;
+        align-items: baseline;
+        margin: 0;
+    }
+    .villa_kunerad, .hostel_friendship {
+        display: none;
+    }
+    figure img {
+        width: 156px;
+        max-height: 155px;
+    }
+
+    .homes_guests_loves_main_name_place,.homes_guests_loves_main_name_hotel {
+        font-size: 12px;
+        padding-top: 4px;
+        line-height: 14px;
+        display: flex;
+    }
+    .homes_guests_loves_main_name_hotel{
+        padding-top: 8px;
+    }
+    .arrows_right {
+        width: 28px;
+        height: 28px;
+
+    }
+    .arrow_position {
+        position: absolute;
+        padding-left: 94%;/*310px*/
+        padding-top: 20%;/*65px*/
     }
 
     /*footer*/
